2023/05/06 v184
	1. Add `instant` to UI property, so the property child can be applied styles instantly with its owner. Normally used to fix the problem for status bar texture.
	2. Add `watch` and `reactive` system.
	3. Fix the re-using of the back drop.

2022/08/31 v146
	1. In a skin of the ui class, it can set the skin for other classes, that'd be applied on all child of the same classes.
	2. The config node system is added for saved variables.
	3. The auto-gen config panel framework is added for config nodes.

2021/10/24 v136
	1. A dynamic task threshold mechanism added, so the cpu time may be required more for too many tasks.
	2. The lower priority task will be level up as normal priority if not handled after several phases to avoid the timer not work when there is too many normal or high tasks.

2021/09/28 v129
	1. Remove a cache check which cause the raid panel doesn't show all the units.

2021/09/28 v127
	1. Wow.FromNextUnitEvent added, so no need use Next for the Health & Power Subject, this'd reduce the task count for performance.

2021/09/26 v124
	1. Add token for the Observable to stop its operations correctly.

2021/09/15 v118
	1. Wow.GetFrame(uitype, observable|event name|observable property name) is added, it'll combine the parent that match the uitype with the
	observable datas(as the first value) to the next.

2021/09/08 v116
	1. Fix the Next method to observable, it'll cause mass display errors.

2021/09/04 v112
	1. The unit like targettarget, part1target will be converted to the real unit for unit event mapping like boss1 through the GUID if that unit existed.
	2. `__Message__` and SendAddonMessage is added, it's a full message framework, async encode API is added for base64 and deflate.
	3. Unit Died Combat Log Event will trigger the UNIT_HEALTH for updating.
	4. The hover spell support spell sub level in classic now.


2021/08/29 v111
	1. Fix the flash of the cast bar.
	2. Fix the Wow.UnitCastInterruptible for channel spell.

2021/08/28 v110